Fetch server data and place on list

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <div class="container">
-      <h1>A Human's Todo</h1>
+      <h1>Reminderizors</h1>
       <form id='form' action="submit">
         <input id='input-todo' type="text" placeholder='Human needs?'>
       </form>
